<resources>
    <string name="app_name">FitnexApp</string>
    <string name="spinner_hint">Select</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="sign_out">Sign Out</string>

    <string name="trainerDashboardPrograms">Programs</string>
    <string name="trainerDashboardClasses">Classes</string>
    <string name="trainerDashboardHome">Home</string>
    <string name="trainerDashboardDiet">Diet</string>
    <string name="trainerDashboardStudio">Studio</string>

    <string name="traineeSearch">Search</string>

    <string-array name="category">
        <item>Select a Category</item>
        <item>Cardio</item>
        <item>Sport</item>
        <item>Strength</item>
        <item>Yoga</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
