<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/traineeHome"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/trainerDashboardHome" />
    <item
        android:title="@string/trainerDashboardDiet"
        android:icon="@drawable/ic_nutrition_tracker"
        />
    <item
        android:id="@+id/traineeSearchEngine"
        android:title="@string/traineeSearch"
        android:icon="@drawable/ic_search_icon"
        />
    <item
        android:id="@+id/traineeProgramsFragment"
        android:enabled="true"
        android:title="@string/trainerDashboardPrograms"
        android:icon="@drawable/ic_program_icon"
        />
    <item
        android:enabled="true"
        android:title="@string/trainerDashboardClasses"
        android:icon="@drawable/ic_class_icon"
        />



</menu>