<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:id="@+id/trainerHome"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/trainerDashboardHome" />
    <item
        android:id="@+id/programsFragment"
        android:enabled="true"
        android:title="@string/trainerDashboardPrograms"
        android:icon="@drawable/ic_program_icon"
        />
    <item
        android:id="@+id/classFragment"
        android:enabled="true"
        android:title="@string/trainerDashboardClasses"
        android:icon="@drawable/ic_class_icon"
        />

    <item
        android:title="@string/trainerDashboardDiet"
        android:icon="@drawable/ic_nutrition_tracker"
        />
    <item
        android:id="@+id/privacyTerms2"
        android:title="@string/trainerDashboardStudio"
        android:icon="@drawable/ic_trainer_studio"
        />

</menu>